# centro-de-comando

./: .dockerignore  .gitattributes  .gitignore  CONTEXTO.md  Centro de Comando.dc.html  DEPLOY-FLY.md  DEPLOY-GCLOUD.md  DEPLOY-RENDER.md  Dockerfile  fly.toml  manifest.webmanifest  package-lock.json  package.json  render.yaml  support.js  sw.js
deploy/: setup-vm.sh
server/: .env.example  auth.mjs  db.mjs  gemini.mjs  index.mjs  setup.mjs  tools.mjs
site/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/ui/: index.html
tools/: dev-server.mjs  gen-icons.mjs
