[package]
name = "centro-de-comando"
version = "0.4.3"
description = "Centro de Comando — ERP/PSA da agência"
authors = ["Rafael Andrade"]
edition = "2021"

[lib]
name = "centro_de_comando_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
